--- a/index.html
+++ b/index.html
@@ -293,7 +293,8 @@
   </section>
 
   <!-- Footer -->
-  <footer>
+  <footer class="footer">
+    <img src="CC8C0EE2-39AB-4F58-84F1-681BC967D068.jpeg" alt="HK properties logo" class="footer-logo">
     <p>©️ 2025 HK Properties | Your Investment, Our Expertise</p>
   </footer>
 
